--- a/ASP.NET Core 2.1 with Angular 71/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ASP.NET Core 2.1 with Angular 71/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -30,6 +30,11 @@
             <span class='fas fa-database'></span> Products
           </a>
         </li>
+        <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <a [routerLink]='["/product/details"]' class="nav-link" (click)='collapse()'>
+            <span class='fas fa-database'></span> Products
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
