Added product module by the command "ng g m products/product --flat". And moved the product related components to product.module.ts and removed from app.module.ts Run the application and it works..yeesssssss

--- a/ASP.NET Core 2.1 with Angular 71/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ASP.NET Core 2.1 with Angular 71/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,7 +32,7 @@
         </li>
         <li class="nav-item" [routerLinkActive]='["link-active"]'>
           <a [routerLink]='["/product/details"]' class="nav-link" (click)='collapse()'>
-            <span class='fas fa-database'></span> Products
+            <span class='fas fa-database'></span> Product details
           </a>
         </li>
       </ul>
